correct a visibility problem that was occuring at the max-width 768px media change.

--- a/css/output.css
+++ b/css/output.css
@@ -206,7 +206,11 @@ html {
 
 @media screen and (max-width: 768px) {
   .initial-mobile-disappear {
-    visibility: hidden;
+    display: none;
+  }
+
+  .nav-bottombar {
+    justify-content: flex-start;
   }
 }
 @media screen and (max-width: 425px) {
