--- a/scss/input.scss
+++ b/scss/input.scss
@@ -197,7 +197,10 @@ html {
 
 @media screen and (max-width: 768px) {
   .initial-mobile-disappear {
-    visibility: hidden;
+    display: none;
+  }
+  .nav-bottombar {
+    justify-content: flex-start;
   }
 }
 
